[tool.poetry]
name = "gemmathon"
version = "0.1.0"
description = ""
authors = ["young"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
langchain = "^0.1.11"
openai = "^1.13.3"
anthropic = "^0.18.1"
langchain-community = "^0.0.25"
langchain-openai = "^0.0.8"
accelerate = "^0.28.0"
torch = "^2.2.1"
trl = "^0.7.11"
peft = "^0.9.0"
bitsandbytes = "0.42.0"
intel-extension-for-pytorch = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
